<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.esup-portail</groupId>
  <artifactId>esup-smsu-api</artifactId>
  <packaging>war</packaging>
  <name>esup-smsu-api</name>
  <version>4.1.0-SNAPSHOT</version>

  <build>
    <!--finalName>${project.name}</finalName-->

    <plugins>

      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.4.0</version>
      </plugin>

      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-compiler-plugin</artifactId>
	<version>3.11.0</version>
	<configuration>
	  <source>17</source>
	  <target>17</target>
	  <!-- keep parameter names at runtime for XML <constructor-arg name="xxx"> : -->
	  <parameters>true</parameters>
	</configuration>
      </plugin>

      <plugin>
	<groupId>org.eclipse.jetty</groupId>
	<artifactId>jetty-maven-plugin</artifactId>
	<version>${jetty-version}</version>
      </plugin>

    </plugins>

    <testResources>
      <testResource>
        <directory>src/test/resources</directory>
      </testResource>
    </testResources>

  </build>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		
    <esup-commons-version>[0.3.3, 0.3.99]</esup-commons-version>
    <jetty-version>9.4.52.v20230823</jetty-version>
  </properties>

  <repositories>
    <repository>
      <id>esup</id>
      <url>https://mvn.esup-portail.org/content/repositories/releases</url>
      <snapshots> <enabled>false</enabled> </snapshots>
      <releases> <enabled>true</enabled> </releases>
    </repository>

    <repository>
      <id>my-local-repo</id>
      <url>file://${basedir}/utils/repository</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-framework-bom</artifactId>
        <version>5.3.29</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
                <dependency>
                        <groupId>javax.servlet</groupId>
                        <artifactId>javax.servlet-api</artifactId>
                        <version>3.1.0</version>
                </dependency>

		<dependency>
		  <groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>[4.1, 4.99]</version>
		</dependency>
		<dependency>
		  <groupId>commons-io</groupId>
		  <artifactId>commons-io</artifactId>
			<version>2.11.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.12.0</version>
		</dependency>
		<dependency>
		  <groupId>commons-codec</groupId>
		  <artifactId>commons-codec</artifactId>
		  <version>1.15</version>
		</dependency>
		<dependency>
		  <groupId>commons-beanutils</groupId>
		  <artifactId>commons-beanutils</artifactId>
		  <version>[1.6, 1.99]</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.libphonenumber</groupId>
			<artifactId>libphonenumber</artifactId>
			<version>8.13.16</version>
		</dependency>
            
		<dependency>
		  <groupId>ch.qos.reload4j</groupId>
		  <artifactId>reload4j</artifactId>
		  <version>[1.2.12, 1.2.99]</version>
		</dependency>


		<dependency>
		  <groupId>org.springframework</groupId>
		  <artifactId>spring-core</artifactId>
		</dependency>
		<dependency>
		  <groupId>org.springframework</groupId>
		  <artifactId>spring-orm</artifactId>
		</dependency>
		<dependency>
		  <groupId>org.springframework</groupId>
		  <artifactId>spring-context-support</artifactId>
		</dependency>
		<dependency>
		  <groupId>org.springframework</groupId>
		  <artifactId>spring-web</artifactId>
		</dependency>


		<!-- hibernate connection pooling -->
		<dependency>
		  <groupId>org.hibernate</groupId>
		  <artifactId>hibernate-core</artifactId>
		  <version>5.6.15.Final</version>
		</dependency>
		
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-reload4j</artifactId>
			<version>[1.6, 1.7.99]</version>
			<exclusions>
				<exclusion>
					<groupId>ch.qos.reload4j</groupId>
					<artifactId>reload4j</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-simple</artifactId>
		    <version>[1.6, 1.7.99]</version>
		</dependency>

        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>[8.0, 8.99]</version>
        </dependency>

		<dependency>
		  <groupId>org.apache.commons</groupId>
		  <artifactId>commons-dbcp2</artifactId>
		  <version>2.9.0</version>
		</dependency>
		<dependency>
		  <groupId>org.esupportail</groupId>
		  <artifactId>esup-commons2-core</artifactId>
		  <version>${esup-commons-version}</version>
		<exclusions>
		  <!-- spring-asm is no more in spring 3.2.x -->
		  <exclusion>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-asm</artifactId>
		  </exclusion>
		  <!-- only used by StringUtils.removeUtf8Accents. Too big to keep unused -->
		  <exclusion>
		  	<groupId>com.ibm.icu</groupId>
		  	<artifactId>icu4j</artifactId>
		  </exclusion>
		  <exclusion>
		  	<groupId>log4j</groupId>
		  	<artifactId>log4j</artifactId>
		  </exclusion>
		</exclusions>
		</dependency>

		<dependency>
		  <groupId>org.quartz-scheduler</groupId>
		  <artifactId>quartz</artifactId>
		  <version>[2.3.2, 2.3.99]</version>
		</dependency>
		<dependency>
			<groupId>com.mchange</groupId>
			<artifactId>c3p0</artifactId>
			<version>0.9.5.5</version>
		</dependency>

		<dependency>
		  <groupId>fr.cvf.util</groupId>
		  <artifactId>lib-mgs</artifactId>
		  <version>4.0.5</version>            
		</dependency>

		<dependency>
		  <groupId>fr.cvf.util</groupId>
		  <artifactId>mode-sgs</artifactId>
		  <version>2.0.5</version>            
		</dependency>

		<dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-databind</artifactId>
		    <version>2.15.2</version>
		</dependency>		

		<dependency>
		  <groupId>org.junit.jupiter</groupId>
		  <artifactId>junit-jupiter-api</artifactId>
		  <version>[5.1, 5.99]</version>
		  <scope>test</scope>
		</dependency>

		<dependency>
		  <groupId>org.springframework</groupId>
		  <artifactId>spring-test</artifactId>
		  <scope>test</scope>
		</dependency>

		<dependency>
		    <groupId>org.apache.derby</groupId>
		    <artifactId>derby</artifactId>
		    <version>[10.14.2.0, 10.99]</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.apache.derby</groupId>
		    <artifactId>derbytools</artifactId>
		    <version>[10.14.2.0, 10.99]</version>
		    <scope>test</scope>
		</dependency>

		
  </dependencies>

</project>
